* Tue Jun 21 2016 Nick Markowski <nmarkowski@keywcorp.com> - 1.0.2-0
- policycoreutils-python now installed by default.

* Tue Apr 12 2016 Kendall Moore <kendall.moore@onyxpoint.com> - 1.0.1-0
- Removed custom type deprecation warning

* Thu Feb 25 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 1.0.0-5
- Added compliance function support

* Fri Jan 16 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.0.0-4
- Changed puppet-server requirement to puppet

* Sun May 04 2014 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.0.0-3
- Rewrite the native type to properly handle all options.
- Remove incorrect use of !! in the selinux provider.

* Wed Apr 16 2014 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.0.0-2
- Update to allow true/false as enable modes so that it can be removed from the
  sec module.

* Wed Apr 09 2014 Nick Markowski <nmarkowski@keywcorp.com> - 1.0.0-2
- Added a custom type to set the selinux mode.  It autorequires all
  selboolean types.  This replaces the selinux_enable execs in the init manifest.

* Mon Oct 07 2013 Kendall Moore <kmoore@keywcorp.com> 1.0.0-1
- Updated all erb templates to properly scope variables.

* Fri May 03 2013 Trevor Vaughan <tvaughan@onyxpoint.com> 1.0.0-0
- First cut at an SELinux module.
- The only current functionality is to enable or disable SELinux on the running
  system in a sane manner.